# Source

./: .gitignore  COPYING  INSTALL  Makefile.am  README.md  configure.ac
contrib/: README.md  coinaaa-qt.pro  coinaaad.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  coinaaa-qt.desktop  coinaaa-qt.install  coinaaa-qt.lintian-overrides  coinaaa-qt.protocol  coinaaad.bash-completion  coinaaad.examples  coinaaad.install  coinaaad.lintian-overrides  coinaaad.manpages  control  copyright  rules  watch
contrib/debian/examples/: coinaaa.conf
contrib/debian/manpages/: coinaaa-qt.1  coinaaa.conf.5  coinaaad.1
contrib/devtools/: README.md  fix-copyright-headers.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: bluematt-key.pgp  linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: DS_Store  README.md  background.psd  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  example-config.cfg  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  build-msw.md  build-osx.md  build-unix.md  coding.md  gitian-building.md  multiwallet-qt.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md  release-notes-0.9.0.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-coinaaad-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
qa/rpc-tests/python-coinaaarpc/: setup.py
share/: setup.nsi.in  ui.rc
share/certs/: BitcoinFoundation_Apple_Cert.pem  BitcoinFoundation_Comodo_Cert.pem  PrivateKeyNotes.md
share/pixmaps/: coinaaa128.xpm  coinaaa16.xpm  coinaaa256.xpm  coinaaa32.xpm  coinaaa64.xpm
share/qt/: Info.plist.in  extract_strings_qt.py  make_windows_icon.sh
src/: Makefile.am  Makefile.include  addrman.h  alert.h  allocators.h  base58.h  bignum.h  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  clientversion.h  coinaaa-cli-res.rc  coinaaa-cli.cpp  coinaaad-res.rc  coinaaad.cpp  coins.h  compat.h  core.h  db.h  hash.h  init.cpp  init.h  key.h  keystore.h  leveldbwrapper.h  limitedmap.h  main.cpp  main.h  miner.cpp  miner.h  mruset.h  net.cpp  net.h  netbase.h  noui.cpp  noui.h  rpcblockchain.cpp  rpcclient.cpp  (+28 more)
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/leveldb/helpers/memenv/: memenv.cc
src/m4/: coinaaa_find_bdb48.m4  coinaaa_qt.m4  coinaaa_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  clientmodel.h  coinaaa.cpp  coinaaa.qrc  coinaaaaddressvalidator.cpp  coinaaaaddressvalidator.h  coinaaaamountfield.cpp  coinaaaamountfield.h  coinaaagui.cpp  coinaaagui.h  coinaaastrings.cpp  coinaaaunits.cpp  coinaaaunits.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  paymentrequest.proto  paymentserver.cpp  paymentserver.h  qvalidatedlineedit.cpp  receivecoinsdialog.cpp  receivecoinsdialog.h  receiverequestdialog.cpp  recentrequeststablemodel.cpp  recentrequeststablemodel.h  rpcconsole.cpp  rpcconsole.h  (+18 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: coinaaa_ach.ts  coinaaa_af_ZA.ts  coinaaa_be_BY.ts  coinaaa_bg.ts  coinaaa_bs.ts  coinaaa_ca.ts  coinaaa_ca@valencia.ts  coinaaa_ca_ES.ts  coinaaa_cmn.ts  coinaaa_cs.ts  coinaaa_cy.ts  coinaaa_da.ts  coinaaa_de.ts  coinaaa_de_AT.ts  coinaaa_el_GR.ts  coinaaa_en.ts  coinaaa_eo.ts  coinaaa_es.ts  coinaaa_es_CL.ts  coinaaa_es_DO.ts  coinaaa_es_MX.ts  coinaaa_es_UY.ts  coinaaa_et.ts  coinaaa_eu_ES.ts  coinaaa_fa.ts  coinaaa_fa_IR.ts  coinaaa_fr.ts  coinaaa_fr_CA.ts  coinaaa_gl.ts  coinaaa_gu_IN.ts  coinaaa_he.ts  coinaaa_hi_IN.ts  coinaaa_hr.ts  coinaaa_hu.ts  coinaaa_id_ID.ts  coinaaa_it.ts  coinaaa_ja.ts  coinaaa_ka.ts  coinaaa_kk_KZ.ts  coinaaa_ko_KR.ts  (+29 more)
src/qt/res/: coinaaa-qt-res.rc
src/qt/res/icons/: .directory  coinaaa.icns
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: DoS_tests.cpp  Makefile.am  README  base58_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  netbase_tests.cpp  rpc_wallet_tests.cpp  test_coinaaa.cpp  util_tests.cpp
src/test/data/: README.md
